# sasiae_client

./: .gitignore  CMakeLists.txt  Makefile
example/: CMakeLists.txt  Makefile  main.cpp
include/sasiae/: asynchronous_updater.hpp  client_thread.hpp  sasiae.hpp  task.hpp  task_manager.hpp
include/sasiae/device/: encoder.hpp  motor.hpp
include/sasiae/utils/: heap.hpp  list.hpp  singleton.hpp
src/: client_thread.cpp
test/: CMakeLists.txt  Makefile  main.cpp
